[gd_scene load_steps=2 format=3 uid="uid://d2d0yv8aq64x"]

[ext_resource type="Script" path="res://Prog_122h.gd" id="1_ler36"]

[node name="Prog_122h" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ler36")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 47.0
offset_right = 713.0
offset_bottom = 609.0

[node name="Claculate" type="Button" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 95.0
offset_right = 1059.0
offset_bottom = 185.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 821.0
offset_top = 339.0
offset_right = 1057.0
offset_bottom = 429.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 469.0
offset_right = 1059.0
offset_bottom = 559.0
text = "Exit"

[connection signal="pressed" from="Claculate" to="." method="_on_claculate_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
